--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/About.css">
-    <link rel="stylesheet" href="src/header.css">
+    <!-- <link rel="stylesheet" href="src/About.css"> -->
+    <!-- <link rel="stylesheet" href="src/header.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
